better invite, update constraints

--- a/therewhere/therewhere/InviteFriendsViewController.xib
+++ b/therewhere/therewhere/InviteFriendsViewController.xib
@@ -16,6 +16,9 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="5s" translatesAutoresizingMaskIntoConstraints="NO" id="prq-vd-064">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rwZ-cE-0SZ">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -36,4 +39,7 @@
             <point key="canvasLocation" x="279" y="270"/>
         </view>
     </objects>
+    <resources>
+        <image name="5s" width="320" height="568"/>
+    </resources>
 </document>
