--- a/therewhere/therewhere/CustomTableViewCell.xib
+++ b/therewhere/therewhere/CustomTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -16,20 +16,20 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vF0-X0-AoW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                     </imageView>
-                    <visualEffectView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PWV-Lo-KAQ">
+                    <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PWV-Lo-KAQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="320" verticalHuggingPriority="1" id="sjV-Gv-3ly">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zly-Tb-nbk">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="111"/>
                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="faT-nE-wkA">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="111"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marcelo Lebre" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKe-1q-ppv" customClass="SpringLabel" customModule="therewhere" customModuleProvider="target">
-                                                <rect key="frame" x="55" y="76" width="210" height="20"/>
+                                                <rect key="frame" x="55" y="76" width="210" height="19.5"/>
                                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -70,6 +70,8 @@
                     <constraint firstItem="PWV-Lo-KAQ" firstAttribute="leading" secondItem="vF0-X0-AoW" secondAttribute="leading" id="C12-8P-hmb"/>
                     <constraint firstItem="PWV-Lo-KAQ" firstAttribute="leading" secondItem="WdS-qV-r00" secondAttribute="leading" id="D7Y-OT-Q60"/>
                     <constraint firstItem="PWV-Lo-KAQ" firstAttribute="top" secondItem="WdS-qV-r00" secondAttribute="top" id="MPn-mp-xk4"/>
+                    <constraint firstAttribute="centerX" secondItem="7ET-5i-OOj" secondAttribute="centerX" id="VFs-NL-kgz"/>
+                    <constraint firstAttribute="centerX" secondItem="7ET-5i-OOj" secondAttribute="centerX" id="aOE-wi-Hv6"/>
                     <constraint firstItem="7ET-5i-OOj" firstAttribute="top" secondItem="WdS-qV-r00" secondAttribute="topMargin" constant="7" id="aQE-dU-y3E"/>
                     <constraint firstItem="PWV-Lo-KAQ" firstAttribute="top" secondItem="vF0-X0-AoW" secondAttribute="top" id="gdx-Is-95L"/>
                     <constraint firstAttribute="trailing" secondItem="PWV-Lo-KAQ" secondAttribute="trailing" id="s0n-xW-tLa"/>
